<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_org"
                    android:src="@mipmap/ic_launcher"/>

                <ImageView
                    android:id="@+id/lakabe_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-8dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_org"
                    android:src="@drawable/ic_laoka_title_vector" />
            </LinearLayout>

            <TextView
                android:id="@+id/teny_fanolorana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/teny_fanolorana"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_note"/>
                <TextView
                    android:id="@+id/noted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:autoLink="web"
                    android:text="@string/teny_noty"
                    android:textColor="#0012AF"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif"/>
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_share"/>
                <TextView
                    android:id="@+id/shared"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/teny_mizara"
                    android:textColor="#0012AF"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:fontFamily="sans-serif"/>
            </LinearLayout>
            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_copyright"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-4dp"
                android:text="@string/app_author"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-4dp"
                android:text="@string/app_phone"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="-4dp"
                android:text="@string/app_country"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                android:fontFamily="sans-serif" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>